# collegial

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  MANIFEST.in  Pipfile  README.md  pyproject.toml  setup.cfg  setup.py
docs/: conf.py  index.rst
src/collegial/: __init__.py
