[metadata]
name = collegial
description = Framework for building sane asyncio applications
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mjpieters/collegial
project_urls =
    Docs: RTD=https://collegial.readthedocs.org
    GitHub: issues=https://github.com/mjpieters/collegial/issues
    GitHub: repo=https://github.com/mjpieters/collegial
author = Martijn Pieters
author_email = mj@zopatista.com
license = BSD-3-Clause
license_files =
    LICENSE.md
keywords =
    asyncio
    framework
platform = any
classifiers =
    Development Status :: 3 - Alpha
    Framework :: AsyncIO
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    =src
packages=find:
python_requires = >= 3.7
install_requires =
    aiosignal
    dynaconf

[options.packages.find]
where=src

[bdist_wheel]
universal = 1

[flake8]
ignore = E203,E501,W503
max-line-length = 80
max-complexity = 12
select = B,C,E,F,W,B9

[tool:pytest]
addopts = -ra -q

[coverage:run]
branch = True
source = collegial

[mypy]
# mypy --strict
warn_unused_configs = True
disallow_subclassing_any = True
disallow_any_generics = True
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_return_any = True
